<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Samples</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Settings</string>
    <string name="pref_app_storage_title">Storage</string>
    <string name="pref_summary_auto_delete">Automatically deletes messages after the message limit has been reached, starting from the oldest.</string>
    <string name="pref_title_auto_delete">Delete old messages</string>
    <string name="pref_summary_mes_limit">Message limit</string>
    <string name="pref_title_mes_limit">100 messages per conversation.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_search">Search</string>
</resources>
