<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- opens a subscreen of settings -->
    <PreferenceCategory
        android:title="@string/pref_app_storage_title"
        android:key="pref_key_storage_settings">
        <CheckBoxPreference
            android:key="pref_key_auto_delete"
            android:summary="@string/pref_summary_auto_delete"
            android:title="@string/pref_title_auto_delete"
            android:defaultValue="false" />
        <Preference
            android:key="pref_key_mes_limit"
            android:dependency="pref_key_auto_delete"
            android:summary="@string/pref_summary_mes_limit"
            android:title="@string/pref_title_mes_limit" />
    </PreferenceCategory>
</PreferenceScreen>